# CSLP-projects

./: .gitignore  BlockSearch.cpp  CMakeLists.txt  Golomb.cpp  Golomb.h  GolombCodingTests  GolombDecoder.hpp  GolombEncoder.hpp  Golomb_Decoder.cpp  Golomb_Decoder.h  Golomb_Enconder.cpp  Golomb_Enconder.h  Golomb_Param.h  HybridCodec.cpp  README.md  Tests.cpp  a.out  clean.sh  deliverable-1-enunciado.txt  indivual-main-tests  unit_tests.cpp
Aulas/Examples_cpp/: README.md  classes-test.cpp  vectors.cpp
Aulas/Tests_Read_YUV/: HybridCodecNoMAT.cpp
Crystal/: README.md
Deliverable_4/: Golomb.cpp  Golomb_Decoder.cpp  Golomb_Encoder.hpp  Makefile  unit_tests  unit_tests.cpp
Deliverable_4/TestFiles/: output.mkv
Examples_cpp/: DisplayImage  DisplayImage.cpp  classes.out
Program_4/: BitStream.h  BitStreamOLD.cpp
Program_5/: main.out
Program_5/tests/: unit_tests.cpp
Projeto/: Doxyfile  doxy-clean.sh
Projeto/Deliverable_1/: Doxyfile
Projeto/Deliverable_2/: a.out
Projeto/Deliverable_2/Program_5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main  main.cpp  main.out  unit_tests
Projeto/Deliverable_2/Program_5/tests/: Makefile  a.out  unit_tests.cpp  unit_tests.out
Projeto/Deliverable_3/Program_7/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests
Projeto/Deliverable_3/Program_7/tests/: unit_tests.cpp
Projeto/Deliverable_3/class-for-del4/: BitStream.h  CMakeLists.txt  Golomb.cpp  GolombDecoder.hpp  GolombEncoder.hpp  Golomb_Decoder.cpp  Golomb_Enconder.cpp  Makefile  cmake_install.cmake  singletest.cpp  unit_tests  unit_tests.cpp
Projeto/Deliverable_4/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Frame_Predicter.h  Golomb.cpp  Golomb_Decoder.hpp  Golomb_Encoder.cpp  Makefile  README.md  RelatorioDeTestesFramePredictor.txt  Results.txt  cmake_install.cmake  unit_tests  unit_tests.cpp
Projeto/Deliverable_4/Final/: BitStream.h  CMakeLists.txt  Frame_Predicter.h  Golomb.cpp  Golomb_Decoder.cpp  Golomb_Encoder.cpp  Golomb_Encoder.hpp  Goulomb_Decoder.cpp  Goulomb_Decoder.hpp  Goulomb_Encoder.cpp  Goulomb_Encoder.hpp  Makefile  TODO.txt  unit_tests  unit_tests.cpp
Projeto/Deliverable_4/Golomb/: Golomb.cpp  Golomb_Decoder.cpp  Golomb_Decoder.hpp  Golomb_Encoder.cpp  Golomb_Encoder.hpp
Projeto/Deliverable_4/OutputFiles/: output.mkv
Projeto/Deliverable_4/Predictor/: Frame_Predicter.h
Projeto/Deliverable_4/class-for-del4/: CMakeCache.txt  CTestTestfile.cmake  clean.sh
Projeto/Deliverable_4_Performance/: CMakeLists.txt  CTestTestfile.cmake  Golomb_Encoder.hpp  cmake_install.cmake  todo.txt  unit_tests  unit_tests.cpp
Relatorio/: README.md
Test_cpp/: classes-test.cpp  hello.out  vectors.out
Tests_Read_YUV/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main
deliverable-5/: BitStream.h  BlockSearch.cpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Frame_Predicter.h  Golomb.cpp  Golomb_Decoder.cpp  Golomb_Decoder.hpp  Golomb_Encoder.hpp  HybridCodec.cpp  Makefile  Results.txt  cmake_install.cmake  main.cpp  unit_tests  unit_tests.cpp
docs/: TODO_APRESENTACAO.txt
week_01/: topics.md  topics.txt
(+463 files in other folders)
